--- a/beranda.html
+++ b/beranda.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="gaya.css">
+  <link rel="stylesheet" type="text/css" href="https://dfioioi04.github.io/gaya.css">
   <title>
     Beranda
   </title>
