--- a/about_finance.html
+++ b/about_finance.html
@@ -21,97 +21,110 @@
       <li><a href="https://dfioioi04.github.io/about.html">Tentang</a></li>
     </ul>
   </nav>
-  <div class="table">
-    <table class="table-list">
-      <tr>
-        <th colspan="3">18-09-22</th>
-      </tr>
-      <tr>
-        <th>Nama</th>
-        <th>Setoran</th>
-        <th>Level Edukasi</th>
-      </tr>
-      <tr>
-        <td>Dhul</td>
-        <td>200kkk</td>
-        <td>100+</td>
-      </tr>
-      <tr>
-        <td>Javier</td>
-        <td>200kkk</td>
-        <td>100+</td>
-      </tr>
-      <tr>
-        <td>Momobami</td>
-        <td>100kkk</td>
-        <td>100+</td>
-      </tr>
-      <tr>
-        <td>Tris</td>
-        <td>100kkk</td>
-        <td>100+</td>
-      </tr>
-      <tr>
-        <td>Hunt</td>
-        <td>100kkk</td>
-        <td>100+</td>
-      </tr>
-      <tr>
-        <td>Jalu</td>
-        <td>25kkk</td>
-        <td>80-</td>
-      </tr>
-      <tr>
-        <td>Morgan L.F</td>
-        <td>25kkk</td>
-        <td>80-</td>
-      </tr>
-    </table>
-    <table class="table-list">
-      <tr>
-        <th colspan="3">18-09-22</th>
-      </tr>
-      <tr>
-        <th>Nama</th>
-        <th>Setoran</th>
-        <th>Level Edukasi</th>
-      </tr>
-      <tr>
-        <td>Dhul</td>
-        <td>200kkk</td>
-        <td>100+</td>
-      </tr>
-      <tr>
-        <td>Javier</td>
-        <td>200kkk</td>
-        <td>100+</td>
-      </tr>
-      <tr>
-        <td>Momobami</td>
-        <td>100kkk</td>
-        <td>100+</td>
-      </tr>
-      <tr>
-        <td>Tris</td>
-        <td>100kkk</td>
-        <td>100+</td>
-      </tr>
-      <tr>
-        <td>Hunt</td>
-        <td>100kkk</td>
-        <td>100+</td>
-      </tr>
-      <tr>
-        <td>Jalu</td>
-        <td>25kkk</td>
-        <td>80-</td>
-      </tr>
-      <tr>
-        <td>Morgan L.F</td>
-        <td>25kkk</td>
-        <td>80-</td>
-      </tr>
-    </table>
+  <div class="background">
+    <div class="community_fund">
+      <div>
+        Dana Komunitas
+      </div>
+    </div>
+    <div class="table">
+      <table class="table-list">
+        <tr>
+          <th colspan="3">18-09-22</th>
+        </tr>
+        <tr>
+          <th>Nama</th>
+          <th>Setoran</th>
+          <th>Level Edukasi</th>
+        </tr>
+        <tr>
+          <td>Dhul</td>
+          <td>200kkk</td>
+          <td>100+</td>
+        </tr>
+        <tr>
+          <td>Javier</td>
+          <td>200kkk</td>
+          <td>100+</td>
+        </tr>
+        <tr>
+          <td>Momobami</td>
+          <td>100kkk</td>
+          <td>100+</td>
+        </tr>
+        <tr>
+          <td>Tris</td>
+          <td>100kkk</td>
+          <td>100+</td>
+        </tr>
+        <tr>
+          <td>Hunt</td>
+          <td>100kkk</td>
+          <td>100+</td>
+        </tr>
+        <tr>
+          <td>Jalu</td>
+          <td>25kkk</td>
+          <td>80-</td>
+        </tr>
+        <tr>
+          <td>Morgan</td>
+          <td>25kkk</td>
+          <td>80-</td>
+        </tr>
+      </table>
+      <table class="table-list">
+        <tr>
+          <th colspan="3">18-09-22</th>
+        </tr>
+        <tr>
+          <th>Nama</th>
+          <th>Setoran</th>
+          <th>Level Edukasi</th>
+        </tr>
+        <tr>
+          <td>Dhul</td>
+          <td>200kkk</td>
+          <td>100+</td>
+        </tr>
+        <tr>
+          <td>Javier</td>
+          <td>200kkk</td>
+          <td>100+</td>
+        </tr>
+        <tr>
+          <td>Momobami</td>
+          <td>100kkk</td>
+          <td>100+</td>
+        </tr>
+        <tr>
+          <td>Tris</td>
+          <td>100kkk</td>
+          <td>100+</td>
+        </tr>
+        <tr>
+          <td>Hunt</td>
+          <td>100kkk</td>
+          <td>100+</td>
+        </tr>
+        <tr>
+          <td>Jalu</td>
+          <td>25kkk</td>
+          <td>80-</td>
+        </tr>
+        <tr>
+          <td>Morgan</td>
+          <td>25kkk</td>
+          <td>80-</td>
+        </tr>
+      </table>
+    </div>
+    <div class="total_fund">
+      <span>Total Dana<span>
+      <div>
+        750.000.000.000
+      </div>
+    </div>
   </div>
 </body>
 </html>
