--- a/about_finance.html
+++ b/about_finance.html
@@ -48,6 +48,15 @@
           <td>100+</td>
         </tr>
         <tr>
+
+          <td>KyoumaSan</td>
+
+          <td>200kkk</td>
+
+          <td>100+</td>
+
+        </tr>
+        <tr>
           <td>Momobami</td>
           <td>100kkk</td>
           <td>100+</td>
