--- a/about_finance.html
+++ b/about_finance.html
@@ -32,10 +32,16 @@
         <tr>
           <th colspan="3">18-09-22</th>
         </tr>
+
         <tr>
           <th>Nama</th>
           <th>Setoran</th>
           <th>Level Edukasi</th>
+        </tr>
+        <tr>
+          <td>Alisa</td>
+          <td>1kkkk</td>
+          <td>100+</td>
         </tr>
         <tr>
           <td>Dhul</td>
@@ -68,6 +74,11 @@
         </tr>
         <tr>
           <td>Hunt</td>
+          <td>100kkk</td>
+          <td>100+</td>
+        </tr>
+        <tr>
+          <td>Arthur</td>
           <td>100kkk</td>
           <td>100+</td>
         </tr>
